Created the description of the form

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>FCC Surver Form</title>
+    <title>FCC Survery Form</title>
   </head>
   <body>
-    <h1>Survery Form</h1>
+    <main>
+      <h1 id="title">Make an Appointment</h1>
+      <article>
+        <p id="description">
+          Book your Appointment with Mr Bin <br />(C.E.O DiHUB kano)
+        </p>
+      </article>
+    </main>
   </body>
 </html>
