Created the form tag

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <body>
     <main>
       <h1 id="title">Make an Appointment</h1>
-      <article>
+      <div>
         <p id="description">
-          Book your Appointment with Mr Bin <br />(C.E.O DiHUB kano)
+          Book your Appointment with Mr Bin
+          <br />(C.E.O DiHUB kano)
         </p>
-      </article>
+      </div>
+      <form id="survey-form" action="index.html" method="post">
+        
+      </form>
     </main>
   </body>
 </html>
