--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         </p>
       </div>
       <form id="survey-form" action="index.html" method="post">
-        
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name"><br><br>
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email"><br><br>
+        <label for="phone">Phone</label>
+        <input type="number" name="number" id="number"><br><br>
       </form>
     </main>
   </body>
