Created the min and max attribute on the phone field

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="email">Email</label>
         <input type="email" name="email" id="email"><br><br>
         <label for="phone">Phone</label>
-        <input type="number" name="number" id="number"><br><br>
+        <input type="number" name="number" id="number" min="1" max="1234567890"><br><br>
       </form>
     </main>
   </body>
