Created the placeholders

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       </div>
       <form id="survey-form" action="index.html" method="post">
         <label for="name">Name</label>
-        <input type="text" name="name" id="name"><br><br>
+        <input placeholder="Name" type="text" name="name" id="name"><br><br>
         <label for="email">Email</label>
-        <input type="email" name="email" id="email"><br><br>
+        <input placeholder="Email" type="email" name="email" id="email"><br><br>
         <label for="phone">Phone</label>
-        <input type="number" name="number" id="number" min="1" max="1234567890"><br><br>
+        <input placeholder="Phone" type="number" name="number" id="number" min="1" max="1234567890"><br><br>
       </form>
     </main>
   </body>
