Created the dropdown for the gender field

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <input placeholder="Email" type="email" name="email" id="email"><br><br>
         <label for="phone">Phone</label>
         <input placeholder="Phone" type="number" name="number" id="number" min="1" max="1234567890"><br><br>
+        <label for="gender">Gender</label>
+        <select id="dropdown" name="gender">
+          <option>Male</option>
+          <option>Female</option>
+        </select>
       </form>
     </main>
   </body>
