Created the radio field (student)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
         <select id="dropdown" name="gender">
           <option>Male</option>
           <option>Female</option>
-        </select>
+        </select><br><br>
+        <fieldset>
+          <legend>
+            Your Current Role:
+          </legend>
+          <input type="radio" name="current-role" value="Student">
+          <label for="student">Student</label>
+        </fieldset>
       </form>
     </main>
   </body>
