Created the checkbox for Area of Interest

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
           </legend>
           <input type="radio" name="current-role" value="Student">
           <label for="student">Student</label>
+          <input type="radio" name="current-role" value="Employed">
+          <label for="student">Employed</label>
+          <input type="radio" name="current-role" value="Self-Employed">
+          <label for="student">Self Employed</label>
+          <input type="radio" name="current-role" value="Others">
+          <label for="student">Others</label>
         </fieldset>
+        <label for="area-of-interest">Area of Interest</label><br>
+        <input type="checkbox" name="AR/VR" value="AR/VR">AR/VR
       </form>
     </main>
   </body>
