Finished adding the checkboxes

--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
           <label for="student">Self Employed</label>
           <input type="radio" name="current-role" value="Others">
           <label for="student">Others</label>
-        </fieldset>
+        </fieldset><br>
         <label for="area-of-interest">Area of Interest</label><br>
-        <input type="checkbox" name="AR/VR" value="AR/VR">AR/VR
+        <input type="checkbox" name="AR/VR" value="AR/VR">AR/VR <br>
+        <input type="checkbox" name="AI" value="AI">AI <br>
+        <input type="checkbox" name="IoT" value="IoT">IoT <br>
+        <input type="checkbox" name="StartUp" value="StartUp">StartUp <br>
+        <input type="checkbox" name="Others" value="Others">Others
       </form>
     </main>
   </body>
