Created the textarea field

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <input type="checkbox" name="AI" value="AI">AI <br>
         <input type="checkbox" name="IoT" value="IoT">IoT <br>
         <input type="checkbox" name="StartUp" value="StartUp">StartUp <br>
-        <input type="checkbox" name="Others" value="Others">Others
+        <input type="checkbox" name="Others" value="Others">Others <br><br>
+        <label for="description-of-appointment">Purpose of Appointment</label>
+        <textarea placeholder="Purpose of Appointment" name="description-of-Appointment" rows="8" cols="80"></textarea>
       </form>
     </main>
   </body>
