Through with the HTML part, starting the styling aspect

--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
           <input type="radio" name="current-role" value="Others">
           <label for="student">Others</label>
         </fieldset><br>
-        <label for="area-of-interest">Area of Interest</label><br>
+        <label for="area-of-interest">Area of Interest:</label><br>
         <input type="checkbox" name="AR/VR" value="AR/VR">AR/VR <br>
         <input type="checkbox" name="AI" value="AI">AI <br>
         <input type="checkbox" name="IoT" value="IoT">IoT <br>
         <input type="checkbox" name="StartUp" value="StartUp">StartUp <br>
         <input type="checkbox" name="Others" value="Others">Others <br><br>
-        <label for="description-of-appointment">Purpose of Appointment</label>
-        <textarea placeholder="Purpose of Appointment" name="description-of-Appointment" rows="8" cols="80"></textarea>
+        <label for="description-of-appointment">Purpose of Appointment:</label><br>
+        <textarea placeholder="Purpose of Appointment" name="description-of-Appointment" rows="8" cols="80"></textarea><br><br>
+        <input type="submit" name="send" value="submit Appointment">
       </form>
     </main>
   </body>
