Added Mr BIN photo and created the IMAGES folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <div>
         <p id="description">
           Book your Appointment with Mr Bin
-          <br />(C.E.O DiHUB kano)
+          <br />(C.E.O DiHUB kano)<br>
+          <img src="./images/mr-bin.jpg" alt="Mr Aminu Bin Ibrahim">
         </p>
       </div>
       <form id="survey-form" action="index.html" method="post">
