Styled the main tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>FCC Survery Form</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <main>
@@ -46,7 +47,7 @@
         <input type="checkbox" name="StartUp" value="StartUp">StartUp <br>
         <input type="checkbox" name="Others" value="Others">Others <br><br>
         <label for="description-of-appointment">Purpose of Appointment:</label><br>
-        <textarea placeholder="Purpose of Appointment" name="description-of-Appointment" rows="8" cols="80"></textarea><br><br>
+        <textarea placeholder="Purpose of Appointment" name="description-of-Appointment"></textarea><br><br>
         <input type="submit" name="send" value="submit Appointment">
       </form>
     </main>
