Styled the title & description ID

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       <h1 id="title">Make an Appointment</h1>
       <div>
         <p id="description">
+          <img src="./images/mr-bin.jpg" alt="Mr Aminu Bin Ibrahim"><br>
           Book your Appointment with Mr Bin
           <br />(C.E.O DiHUB kano)<br>
-          <img src="./images/mr-bin.jpg" alt="Mr Aminu Bin Ibrahim">
+
         </p>
       </div>
       <form id="survey-form" action="index.html" method="post">
