Styled the submit button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <input type="checkbox" name="Others" value="Others">Others <br><br>
         <label for="description-of-appointment">Purpose of Appointment:</label><br>
         <textarea placeholder="Purpose of Appointment" name="description-of-Appointment"></textarea><br><br>
-        <input type="submit" name="send" value="submit Appointment">
+        <input type="submit" name="send" value="Submit">
       </form>
     </main>
   </body>
