Added the required attribute on the fields

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </p>
       </div>
       <form id="survey-form" action="index.html" method="post">
-        <label for="name">Name</label>
-        <input placeholder="Name" type="text" name="name" id="name"><br><br>
-        <label for="email">Email</label>
-        <input placeholder="Email" type="email" name="email" id="email"><br><br>
-        <label for="phone">Phone</label>
-        <input placeholder="Phone" type="number" name="number" id="number" min="1" max="1234567890"><br><br>
+        <label for="name-label">Name</label>
+        <input required placeholder="Name" type="text" name="name" id="name"><br><br>
+        <label for="email-label">Email</label>
+        <input required placeholder="Email" type="email" name="email" id="email"><br><br>
+        <label for="phone-label">Phone</label>
+        <input required placeholder="Phone" type="number" name="number" id="number" min="1" max="1234567890"><br><br>
         <label for="gender">Gender</label>
         <select id="dropdown" name="gender">
           <option>Male</option>
