Completed bugging the errors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input required placeholder="Name" type="text" name="name" id="name"><br><br>
         <label for="email-label">Email</label>
         <input required placeholder="Email" type="email" name="email" id="email"><br><br>
-        <label for="phone-label">Phone</label>
+        <label for="number-label">Phone</label>
         <input required placeholder="Phone" type="number" name="number" id="number" min="1" max="1234567890"><br><br>
         <label for="gender">Gender</label>
         <select id="dropdown" name="gender">
@@ -50,7 +50,7 @@
         <input type="checkbox" name="Others" value="Others">Others <br><br>
         <label for="description-of-appointment">Purpose of Appointment:</label><br>
         <textarea placeholder="Purpose of Appointment" name="description-of-Appointment"></textarea><br><br>
-        <input type="submit" name="send" value="Submit">
+        <input id="submit" type="submit" name="send" value="Submit">
       </form>
     </main>
   </body>
