--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </p>
       </div>
       <form id="survey-form" action="index.html" method="post">
-        <label for="name-label">Name</label>
+        <label id="name-label" for="name-label">Name</label>
         <input required placeholder="Name" type="text" name="name" id="name"><br><br>
-        <label for="email-label">Email</label>
+        <label id="email-label" for="email-label">Email</label>
         <input required placeholder="Email" type="email" name="email" id="email"><br><br>
-        <label for="number-label">Phone</label>
+        <label id="number-label" for="number-label">Phone</label>
         <input required placeholder="Phone" type="number" name="number" id="number" min="1" max="1234567890"><br><br>
         <label for="gender">Gender</label>
         <select id="dropdown" name="gender">
